@@ -1,10 +1,9 @@
 package com.alkemy.wallet.model.mapper;
 
-import com.alkemy.wallet.model.request.UserRequestDto;
-import com.alkemy.wallet.model.response.UserResponseDto;
+import com.alkemy.wallet.model.dto.request.UserRequestDto;
+import com.alkemy.wallet.model.dto.response.UserResponseDto;
 import com.alkemy.wallet.model.entity.Role;
 import com.alkemy.wallet.model.entity.User;
-import com.alkemy.wallet.model.response.list.UserListResponseDto;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
@@ -27,8 +26,6 @@ public class UserMapper {
     }
 
     public UserResponseDto entity2Dto(User entity) {
-        if (entity == null)
-            return null;
         return UserResponseDto.builder()
                 .id(entity.getId())
                 .firstName(entity.getFirstName())
@@ -54,9 +51,7 @@ public class UserMapper {
         return entity2Return;
     }
 
-    public UserListResponseDto entityList2DtoList(List<User> entityList) {
-        return UserListResponseDto.builder()
-                .users(entityList.stream().map(this::entity2Dto).collect(Collectors.toList()))
-                .build();
+    public List<UserResponseDto> entityList2DtoList(List<User> entityList) {
+        return entityList.stream().map(this::entity2Dto).toList();
     }
 }
